<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageView
        android:id="@+id/book_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:background="@android:color/darker_gray"
        android:cropToPadding="true"/>

    <ImageButton
        android:id="@+id/book_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title_label"
        style="?android:listSeparatorTextViewStyle" />

    <EditText
        android:id="@+id/book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_title_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_details_label"
        style="?android:listSeparatorTextViewStyle" />

    <Button
        android:id="@+id/book_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:id="@+id/book_readed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_readed_label" />

    <Button
        android:id="@+id/remove_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Удалить книгу" />
    <Button
        android:id="@+id/book_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/book_report_text"/>

</LinearLayout>
